crates/logic-compile/src/projections/snapshots/projection-report@relator-mediation.snap
---
source: crates/logic-compile/src/projections/tests.rs
expression: rdf_snapshot(&arts.report)
---
<https://blackcatinformatics.ca/logic/projection-report> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionReport>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/axiomCount> "10"^^<http://www.w3.org/2001/XMLSchema#integer>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/canonical-rdf12>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/clif>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/datalog>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/gufo>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/n3>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/nemo>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/owl-dl>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/hasProjection> <https://blackcatinformatics.ca/logic/target/owl-el>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/profileCount> "0"^^<http://www.w3.org/2001/XMLSchema#integer>
<https://blackcatinformatics.ca/logic/projection-report> <https://blackcatinformatics.ca/logic/ruleCount> "0"^^<http://www.w3.org/2001/XMLSchema#integer>
<https://blackcatinformatics.ca/logic/target/canonical-rdf12> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/canonical-rdf12> <http://www.w3.org/2000/01/rdf-schema#label> "canonical-rdf12"
<https://blackcatinformatics.ca/logic/target/canonical-rdf12> <https://blackcatinformatics.ca/logic/complexityClass> "N/A (identity serialization)"
<https://blackcatinformatics.ca/logic/target/canonical-rdf12> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/ExactPreservation>
<https://blackcatinformatics.ca/logic/target/clif> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/clif> <http://www.w3.org/2000/01/rdf-schema#label> "clif"
<https://blackcatinformatics.ca/logic/target/clif> <https://blackcatinformatics.ca/logic/complexityClass> "full first-order (semi-decidable)"
<https://blackcatinformatics.ca/logic/target/clif> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/ExactPreservation>
<https://blackcatinformatics.ca/logic/target/datalog> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/datalog> <http://www.w3.org/2000/01/rdf-schema#label> "datalog"
<https://blackcatinformatics.ca/logic/target/datalog> <https://blackcatinformatics.ca/gmeow/lossyDrop> "OWL class expressions not representable as Datalog atoms are dropped"
<https://blackcatinformatics.ca/logic/target/datalog> <https://blackcatinformatics.ca/gmeow/lossyDrop> "modal/world context flattened to predicate reification"
<https://blackcatinformatics.ca/logic/target/datalog> <https://blackcatinformatics.ca/gmeow/lossyDrop> "no existential rule heads (skolemisation not emitted)"
<https://blackcatinformatics.ca/logic/target/datalog> <https://blackcatinformatics.ca/logic/complexityClass> "terminating/PTIME-data"
<https://blackcatinformatics.ca/logic/target/datalog> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/SoundUnderApproximation>
<https://blackcatinformatics.ca/logic/target/gufo> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/gufo> <http://www.w3.org/2000/01/rdf-schema#label> "gufo"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "actual: logic:domain on <https://example.org/relator-mediation/employedBy> has no gUFO bridge equivalent"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "actual: logic:domain on <https://example.org/relator-mediation/employs> has no gUFO bridge equivalent"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "actual: logic:inverseOf on <https://example.org/relator-mediation/employs> has no gUFO bridge equivalent"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "actual: logic:range on <https://example.org/relator-mediation/employedBy> has no gUFO bridge equivalent"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "actual: logic:range on <https://example.org/relator-mediation/employs> has no gUFO bridge equivalent"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "fluents / 4D temporal-part structure (logic:Fluent, logic:temporalPartOf, logic:Process, logic:Perdurant beyond gufo:Event) have no gUFO class and are dropped"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "logic: world-modal/contextual structure has no gUFO equivalent"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "logic:Mode (and Intrinsic/Extrinsic mode/aspect refinements) has no single gUFO base class as a projection target and is dropped (gufo:Aspect is emitted; gufo:Mode does not exist)"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "multi-level / HiLog instantiation (logic:instanceOf, logic:orderedType — arbitrary type-of-type levels) has no gUFO punning equivalent and is dropped"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "native builtins (logic:Builtin and the builtin individuals) have no gUFO class and are dropped"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "native edge-property metadata (RDF-1.2 statement-level scope on logic edges) has no gUFO equivalent and is dropped"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "only gUFO-mapped sorts and structural predicates emitted"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "preservation kind is ValidationOnly: gUFO is an anti-pattern check, not an entailment surface"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "rules not representable in gUFO; only type/subtype declarations kept"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "scoped open/closed worlds (logic:WorldBoundary, logic:closedUnder, scoped-CWA) have no gUFO equivalent and are dropped"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "strict-partial-order parthood characteristics (asymmetric + irreflexive on logic:properPartOf) cannot be declared in OWL 2 DL gUFO (it only states transitivity) and are dropped"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/gmeow/lossyDrop> "the five gUFO temporary-situation reifiers (QualityValueAttributionSituation, TemporaryConstitution/Instantiation/Parthood/RelationshipSituation) are SUPERSEDED by logic:Fluent + RDF-1.2 edge properties — not re-emitted by the down-projection"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/logic/complexityClass> "PTIME"
<https://blackcatinformatics.ca/logic/target/gufo> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/ValidationOnly>
<https://blackcatinformatics.ca/logic/target/n3> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/n3> <http://www.w3.org/2000/01/rdf-schema#label> "n3"
<https://blackcatinformatics.ca/logic/target/n3> <https://blackcatinformatics.ca/gmeow/lossyDrop> "N3 builtins used for arithmetic/string predicates where available"
<https://blackcatinformatics.ca/logic/target/n3> <https://blackcatinformatics.ca/gmeow/lossyDrop> "modal context encoded as quoted graph arguments (may overgenerate)"
<https://blackcatinformatics.ca/logic/target/n3> <https://blackcatinformatics.ca/gmeow/lossyDrop> "negation-as-failure guards are dropped; monotone log:implies cannot express a defeater, so a defeasible rule is over-approximated (CompleteOver) rather than emitting the guard as a positive antecedent"
<https://blackcatinformatics.ca/logic/target/n3> <https://blackcatinformatics.ca/logic/complexityClass> "semi-decidable"
<https://blackcatinformatics.ca/logic/target/n3> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/CompleteOverApproximation>
<https://blackcatinformatics.ca/logic/target/nemo> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/nemo> <http://www.w3.org/2000/01/rdf-schema#label> "nemo"
<https://blackcatinformatics.ca/logic/target/nemo> <https://blackcatinformatics.ca/logic/complexityClass> "PTIME/datalog"
<https://blackcatinformatics.ca/logic/target/nemo> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/ExactPreservation>
<https://blackcatinformatics.ca/logic/target/owl-dl> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/owl-dl> <http://www.w3.org/2000/01/rdf-schema#label> "owl-dl"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/gmeow/lossyDrop> "contextual scope (standpoint, time, confidence) is dropped"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/gmeow/lossyDrop> "modal/world context is erased"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/gmeow/lossyDrop> "probabilistic profile not representable in OWL DL"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/gmeow/lossyDrop> "rule bodies mapped to OWL axioms where OWL is expressive enough; existential rules beyond OWL DL expressivity are dropped"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/gmeow/lossyDrop> "transaction-path evolution has no faithful OWL DL projection: serial conjunction, executional entailment over a path of states, elementary update as supersession, the hypothetical-execution sandbox and its discarded-run witness, and concurrent composition with conflict-serializability have no OWL axiom form and are dropped — OWL describes a single static state, not a transaction path"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/logic/complexityClass> "decidable/N2EXPTIME"
<https://blackcatinformatics.ca/logic/target/owl-dl> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/SoundUnderApproximation>
<https://blackcatinformatics.ca/logic/target/owl-el> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/ProjectionTarget>
<https://blackcatinformatics.ca/logic/target/owl-el> <http://www.w3.org/2000/01/rdf-schema#label> "owl-el"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/gmeow/lossyDrop> "actual: logic:inverseOf on <https://example.org/relator-mediation/employs> is not EL-safe; dropped"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/gmeow/lossyDrop> "contextual scope (standpoint, time, confidence) is dropped"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/gmeow/lossyDrop> "modal/world context is erased"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/gmeow/lossyDrop> "only EL-safe axioms emitted (no disjointness, no inverseOf, no cardinality restrictions, no nominals)"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/gmeow/lossyDrop> "rules beyond EL expressivity are dropped"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/gmeow/lossyDrop> "transaction-path evolution has no faithful OWL EL projection: serial conjunction, executional entailment over a path of states, elementary update as supersession, the hypothetical-execution sandbox and its discarded-run witness, and concurrent composition with conflict-serializability have no OWL axiom form and are dropped — OWL describes a single static state, not a transaction path"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/logic/complexityClass> "PTIME"
<https://blackcatinformatics.ca/logic/target/owl-el> <https://blackcatinformatics.ca/logic/preservationKind> <https://blackcatinformatics.ca/logic/SoundUnderApproximation>
