crates/logic-compile/src/projections/snapshots/shacl-af.snap
---
source: crates/logic-compile/src/projections/tests.rs
expression: arts.shacl_af
---
# GENERATED by `gmeow logic compile` — DO NOT EDIT.
# SHACL-AF rule projection of the canonical logic: program (design/LOGIC-SHACL-AF.md):
# derivation/aggregation authored in logic: and projected to sh:SPARQLRule
# (Principle 17 — computation added to the canon and emitted, never bolted onto SHACL).
@prefix gmeow: <https://blackcatinformatics.ca/gmeow/> .
@prefix sh:    <http://www.w3.org/ns/shacl#> .
@prefix rdfs:  <http://www.w3.org/2000/01/rdf-schema#> .

gmeow:GenComputeRule_rel_r0
    a sh:NodeShape ;
    rdfs:label "SHACL-AF projection of the logic: rule deriving <https://blackcatinformatics.ca/logic/rel> (generated)"@en ;
    sh:target [
        a sh:SPARQLTarget ;
        sh:select """SELECT ?this WHERE { ?this <https://blackcatinformatics.ca/logic/rel> ?y . FILTER ( ?this != ?y ) }""" ;
    ] ;
    sh:rule [
        a sh:SPARQLRule ;
        sh:construct """CONSTRUCT { $this <https://blackcatinformatics.ca/logic/rel> ?y } WHERE { $this <https://blackcatinformatics.ca/logic/rel> ?y . FILTER ( $this != ?y ) }""" ;
    ] .
